/*
 * Copyright 2023 Alibaba Cloud, Inc. or its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package remote_cache;

import "google/protobuf/empty.proto";

option go_package = ".;remote_cache";

enum Code{
  Success = 0;
  Continue = 1;
  AlreadyExists = 2;
  InProgress = 3;
}

message CacheInfo{
  string key = 1;
  int64 len = 3;
}

message LoadRequest{
  string key = 1;
}

message LoadResponse{
  oneof payload {
    CacheInfo info = 1;
    bytes data = 2;
  }
}

message CacheRequest{
  oneof payload {
    CacheInfo info = 1;
    bytes data = 2;
  }
}

message CacheResponse{
  Code code = 1;
  string message = 2;
}

message RemoveRequest{
  string key = 1;
}

service RemoteCache{
  rpc Load(LoadRequest) returns(stream LoadResponse);
  rpc Cache(stream CacheRequest) returns(stream CacheResponse);
  rpc Remove(RemoveRequest) returns(google.protobuf.Empty);
}
